# rocky

./: .gitignore  README.md
rocky/: ConstExprArray.h  HasTypeMember.h  Identity.h  NthTupleType.h  ReverseTuple.h  StringNumberConversion.h  TupleSize copy 2.h  TupleSize.h  TypeSelection.h  VariantUtility.h  WrapTypeMember.h
rocky/app/: Count.h  CountIf.h  Extract.h  Find.h  FindIf.h  RemoveIf.h  Replace.h  ReplaceIf.h  Rotate.h  Transform.h  Unique.h  VariantUtility.h
rocky/base/: ArrayUtility.h  BitOperation.h  CharSequenceUtility.h  ConstExprArray.h  Count.h  Extract.h  Find.h  FindIf.h  ForEach.h  ForEachArgument.h  ForEachTuple.h  FunctionArgumentBinding.h  FunctionComposition.h  FunctionUtility.h  HasMember.h  Identity.h  IntegerSequenceUtility.h  IntegralConstantUtility.h  MacroUtility.h  MultipleInheritance.h  Random.h  Remove.h  Replace.h  StringNumberConversion.h  Swap.h  Transform.h  TransformIntegerSequence.h  TypeAt.h  TypeComposition.h  TypeList.h  TypeListFlatten.h  TypeListJoin.h  TypeListUtility.h  TypeListWrap.h  TypeName.h  TypeSelection.h  TypeSize.h  TypeTree.h  TypeUtility.h  Unique.h  (+1 more)
rocky/et/: ActiveIterator.h  BinaryOperator.h  BinaryOperatorSpec.h  DoubleDispatch.h  ExpressionTemplate.h  ExpressionTemplateFwd.h  ExpressionTraits.h  Fold.h  LambdaExpression.h  MathFunction.h  MathFunctionSpec.h  OperationPolicy.h  PassiveIterator.h  PlaceHolderDef.h  Print.h  ReplaceOpTag.h  StoragePolicy.h  Traversal.h  UnaryOperator.h  UnaryOperatorSpec.h
rocky/math/: Abs.h  Distance.h  Divisor.h  Gcd.h  Lcm.h  NumberCompare.h  NumberSequence.h  NumberSequence2.h  Power.h  RatioString.h
rocky/meta/: CharSequenceUtility.h  Count.h  CountTuple.h  Extract.h  Find.h  FindTuple.h  Fold.h  FoldRight.h  ForEachArgument.h  ForEachTuple.h  ForEachTupleElementType.h  HasMember.h  Identity.h  IntegerSequenceUtility.h  IntegralConstantUtility.h  NthTuple.h  Remove.h  RemoveTuple.h  Replace.h  ReplaceTuple.h  ReverseTuple.h  Transform.h  TransformIntegerSequence.h  TransformTuple.h  TypeAt.h  (+11 more)
rocky/test/: CMakeLists.txt  CharSequenceUtilityTest.cpp  CountTupleTest.cpp  ExtractTupleTest.cpp  FindTupleTest.cpp  FoldRight.cpp  FoldTest.cpp  ForEachArgumentTest.cpp  ForEachTupleElementTest.cpp  ForEachTupleTest.cpp  ForEachTupleTypeTest.cpp  HasMemberTest.cpp  HasTypeMemberTest.cpp  IdentityTest.cpp  IntegerSequenceUtilityTest.cpp  IntegralConstantUtility.cpp  IntegralConstantUtilityTest.cpp  MiscTest.cpp  MultipleInheritance.cpp  NthTupleTest.cpp  NthTupleTypeTest.cpp  PowerTest.cpp  RemoveTupleTest.cpp  ReplaceTupleTest.cpp  ReverseTupleTest.cpp  TransformIntegerSequenceTest.cpp  TransformTupleTest.cpp  TupleSizeTest.cpp  TypeListTest.cpp  TypeSelectionTest.cpp  TypeUtilityTest.cpp  UniqueTupleTest.cpp  VariantUtilityTest.cpp  WrapTypeMemberTest.cpp
rocky/test/app/: CountIfTest.cpp  CountTest.cpp  ExtractTest.cpp  FindIfTest.cpp  FindTest.cpp  RemoveIfTest.cpp  RemoveTest.cpp  ReplaceIfTest.cpp  ReplaceTest.cpp  RotateTest.cpp  TransformTest.cpp  UniqueTest.cpp  VariantUtilityTest.cpp
rocky/test/base/: ArrayUtilityTest.cpp  BitOperationTest.cpp  CharSequenceUtilityTest.cpp  ConstExprArrayTest.cpp  CountTest.cpp  ExtractTest.cpp  FindIfTest.cpp  ForEachArgumentTest.cpp  ForEachTest.cpp  ForEachTupleTest.cpp  FunctionArgumentBindingTest.cpp  FunctionCompositionTest.cpp  FunctionUtilityTest.cpp  HasMemberTest.cpp  IdentityTest.cpp  IntegerSequenceUtilityTest.cpp  IntegralConstantUtilityTest.cpp  MultipleInheritance.cpp  RandomTest.cpp  RemoveTest.cpp  ReplaceTest.cpp  StringNumberConversionTest.cpp  SwapTest.cpp  TransformIntegerSequenceTest.cpp  TransformTest.cpp  TypeAtTest.cpp  TypeCompositionTest.cpp  TypeListFlattenTest.cpp  TypeListJoinTest.cpp  TypeListTest.cpp  TypeListUtilityTest.cpp  TypeListWrapTest.cpp  TypeNameTest.cpp  TypeSelectionTest.cpp  TypeSizeTest.cpp  TypeTreeTest.cpp  TypeUtilityTest.cpp  UniqueTest.cpp
rocky/test/et/: DefaultStorageTest.cpp  DoubleDispatchTest.cpp  ExpressionTemplateTest.cpp  ExpressionTraitsTest.cpp  FoldTest.cpp  LambdaExpressionTest.cpp  MathFunctionTest.cpp  NumberSequenceTest.cpp  OperatorOverloadingTest.cpp  PrintTest.cpp  ReplaceOpTagTest.cpp  TraversalTest.cpp  ValueStorageTest.cpp
rocky/test/etc/: VectorTest.cpp
rocky/test/math/: AbsTest.cpp  DistanceTest.cpp  DivisorTest.cpp  GcdTest.cpp  LcmTest.cpp  NumberSequenceTest.cpp  PowerTest.cpp  RatioStringTest.cpp
rocky/test/math/calc/: CalculatorTest.cpp
rocky/test/meta/: CharSequenceUtilityTest.cpp  CountTest.cpp  CountTupleTest.cpp  ExtractTest.cpp  FindTest.cpp  FindTupleTest.cpp  FoldTest.cpp  ForEachTupleTest.cpp  IdentityTest.cpp  IntegerSequenceUtilityTest.cpp  IntegralConstantUtilityTest.cpp  NthTupleTest.cpp  RemoveTest.cpp  RemoveTupleTest.cpp  ReplaceTest.cpp  ReverseTupleTest.cpp  SwapTest.cpp  TransformIntegerSequenceTest.cpp  TransformTest.cpp  TransformTupleTest.cpp  TupleSizeTest.cpp  TypeListFlattenTest.cpp  TypeListJoinTest.cpp  TypeListTest.cpp  TypeListToTupleTest.cpp  TypeListUtilityTest.cpp  TypeSizeTest.cpp  TypeUtilityTest.cpp  UniqueTest.cpp  UniqueTupleTest.cpp
rocky/test/muse/: IntervalTest.cpp  MusicalNoteTest.cpp  MusicalScaleTest.cpp  PitchClassTest.cpp
rocky/test/skull/: AllTest.cpp  AnyTest.cpp  ConcatTest.cpp  DropTest.cpp  DropWhileTest.cpp  ElemTest.cpp  EvenTest.cpp  FilterTest.cpp  FlipTest.cpp  FoldLTest.cpp  FoldRTest.cpp  FstTest.cpp  HeadTest.cpp  IdTest.cpp  InitTest.cpp  IterateNTest.cpp  LastTest.cpp  LengthTest.cpp  MapTest.cpp  MaxTest.cpp  MaximumTest.cpp  MinTest.cpp  MinimumTest.cpp  NegateTest.cpp  NotTest.cpp  NullTest.cpp  OddTest.cpp  PredTest.cpp  ProductTest.cpp  RangeTest.cpp  ReplicateTest.cpp  ReverseTest.cpp  SndTest.cpp  SplitAtTest.cpp  SuccTest.cpp  SumTest.cpp  TailTest.cpp  TakeTest.cpp  TakeWhileTest.cpp  ZipTest.cpp  (+1 more)
rocky/test/wolca/: FlattenTest.cpp  FoldListTest.cpp  FoldTest.cpp  FromDigitsTest.cpp  IntegerDigitsTest.cpp  IntegerLengthTest.cpp  NestListTest.cpp  NestTest.cpp  PadLeftTest.cpp  PadRightTest.cpp  PartitionTest.cpp  RangeTest.cpp  RiffleTest.cpp  RotateTest.cpp  StringUtilityTest.cpp
(+63 files in other folders)
