cmake_minimum_required(VERSION 3.3)
project(RockyTest)

set(BOOST_ROOT "../../../boost_1_59_0")
find_package(Boost 1.59.0)
if(Boost_FOUND)
    include_directories(${BOOST_ROOT})
else()
    message(FATAL_ERROR "Could not find boost!")
endif()

set(ROCKY_ROOT "../..")
include_directories(${ROCKY_ROOT})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

set(HEADER_FILES
        ../base/ConstExprArray.h
        ../base/StringNumberConversion.h
        ../base/ForEachArgument.h
        ../base/ForEachTuple.h
        ../base/HasMember.h
        ../base/Identity.h
        ../base/IntegerSequenceUtility.h
        ../base/IntegralConstantUtility.h
        ../base/MultipleInheritance.h
        ../base/TypeSize.h
        ../base/TypeSelection.h
        ../base/TypeUtility.h
        ../base/CharSequenceUtility.h
        ../base/TransformIntegerSequence.h
        ../base/TypeList.h
        ../base/TypeListFlatten.h
        ../base/TypeListJoin.h
        ../base/TypeAt.h
        ../base/Swap.h
        ../base/TypeListUtility.h
        ../math/Power.h
        ../math/Abs.h
        ../math/RatioString.h
        ../math/Divisor.h
        ../math/Gcd.h
        ../math/Lcm.h
        ../wolca/StringUtility.h
        ../wolca/Range.h
        ../wolca/IntegerLength.h
        ../wolca/IntegerDigits.h
        ../wolca/Partition.h
        ../wolca/Rotate.h
        ../wolca/Riffle.h
        ../skull/Head.h
        ../skull/Tail.h
        ../skull/Take.h
        ../skull/Drop.h
        ../skull/Init.h
        ../skull/Map.h
        ../skull/Filter.h
        ../skull/FoldL.h
        ../skull/FoldR.h
        ../skull/Length.h
        ../skull/Reverse.h
        ../skull/Sum.h
        ../skull/Zip.h
        ../skull/Last.h
        ../skull/Null.h
        ../skull/Maximum.h
        ../skull/Minimum.h
        ../skull/Product.h
        ../skull/Elem.h
        ../skull/Even.h
        ../skull/Odd.h
        ../skull/Replicate.h
        ../skull/Fst.h
        ../skull/Snd.h
        ../skull/Range.h
        ../skull/All.h
        ../skull/TakeWhile.h
        ../skull/Any.h
        ../skull/DropWhile.h
        ../skull/Not.h
        ../skull/Pred.h
        ../skull/Succ.h
        ../skull/SplitAt.h
        ../app/VariantUtility.h
        ../app/Count.h
        ../app/Find.h
        ../app/FindIf.h
        ../app/Remove.h
        ../app/Replace.h
        ../app/Transform.h
        ../app/Unique.h
        ../app/Extract.h
        ../app/Rotate.h
        ../muse/MusicalNote.h
        ../muse/MusicalScale.h)

set(SOURCE_FILES
        main.cpp
        base/ConstExprArrayTest.cpp
        base/StringNumberConversionTest.cpp
        base/TypeSizeTest.cpp
        base/HasMemberTest.cpp
        base/IdentityTest.cpp
        base/TypeSelectionTest.cpp
        base/IntegralConstantUtilityTest.cpp
        base/MultipleInheritance.cpp
        base/ForEachArgumentTest.cpp
        base/IntegerSequenceUtilityTest.cpp
        base/ForEachTupleTest.cpp
        base/TypeUtilityTest.cpp
        base/CharSequenceUtilityTest.cpp
        base/TransformIntegerSequenceTest.cpp
        base/TypeListTest.cpp
        base/TypeListFlattenTest.cpp
        base/TypeListJoinTest.cpp
        base/TypeAtTest.cpp
        base/SwapTest.cpp
        base/TypeListUtilityTest.cpp
        math/PowerTest.cpp
        math/AbsTest.cpp
        math/RatioStringTest.cpp
        math/DivisorTest.cpp
        math/GcdTest.cpp
        math/LcmTest.cpp
        wolca/StringUtilityTest.cpp
        wolca/RangeTest.cpp
        wolca/IntegerLengthTest.cpp
        wolca/IntegerDigitsTest.cpp
        wolca/PartitionTest.cpp
        wolca/RotateTest.cpp
        wolca/RiffleTest.cpp
        skull/HeadTest.cpp
        skull/TailTest.cpp
        skull/TakeTest.cpp
        skull/DropTest.cpp
        skull/InitTest.cpp
        skull/MapTest.cpp
        skull/FilterTest.cpp
        skull/FoldLTest.cpp
        skull/FoldRTest.cpp
        skull/LengthTest.cpp
        skull/ReverseTest.cpp
        skull/SumTest.cpp
        skull/ZipTest.cpp
        skull/LastTest.cpp
        skull/NullTest.cpp
        skull/MaximumTest.cpp
        skull/MinimumTest.cpp
        skull/ProductTest.cpp
        skull/ElemTest.cpp
        skull/EvenTest.cpp
        skull/OddTest.cpp
        skull/ReplicateTest.cpp
        skull/FstTest.cpp
        skull/SndTest.cpp
        skull/RangeTest.cpp
        skull/AllTest.cpp
        skull/TakeWhileTest.cpp
        skull/AnyTest.cpp
        skull/DropWhileTest.cpp
        skull/NotTest.cpp
        skull/PredTest.cpp
        skull/SuccTest.cpp
        skull/SplitAtTest.cpp
        app/VariantUtilityTest.cpp
        app/CountTest.cpp
        app/FindTest.cpp
        app/FindIfTest.cpp
        app/RemoveTest.cpp
        app/ReplaceTest.cpp
        app/TransformTest.cpp
        app/UniqueTest.cpp
        app/ExtractTest.cpp
        app/RotateTest.cpp
        muse/MusicalNoteTest.cpp
        muse/MusicalScaleTest.cpp)

add_executable(RockyTest ${HEADER_FILES} ${SOURCE_FILES})

